--- a/package.json
+++ b/package.json
@@ -39,5 +39,11 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
-  }
+  },
+  "keywords": [
+    "next",
+    "blob",
+    "file",
+    "buffer"
+  ]
 }
