--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-size": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "jest": "^26.6.3",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.2.1",
     "release-it": "^14.2.2",
     "uglify-js": "3.12.4",
